# IDX-Stock-Analyzer

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  idx-analyzer.toml.example  install.sh  pyproject.toml
docs/: API.md  IMPLEMENTATION_STATUS.md  ROADMAP.md  STRATEGIC_ROADMAP.md  TECHNICAL_ANALYSIS.md  USAGE.md
examples/: README.md  basic_usage.py  batch_analysis.sh  compare_stocks.py
idx_analyzer/: __init__.py  analyzer.py  cache.py  candlestick_patterns.py  catppuccin_theme.py  chart.py  cli.py  config.py  corporate_actions.py  exceptions.py  indonesian_sentiment_lexicon.json  news_scrapers.py  screener.py  screener_export.py  sector_comparison.py  sectors_data.py  sentiment.py  stocks_data.py  tui_cache.py
idx_analyzer/data/: idx_stocks.json
idx_analyzer/tui/: app.py
idx_analyzer/tui/screens/: chart_screen.py  market_screen.py  watchlist_screen.py
