[project]
name = "idx-analyzer"
version = "0.1.0"
description = "Indonesian Stock Market (IDX) Technical Analysis Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "requests-cache>=1.3.0",
    "rich>=13.7.0",
    "tomli-w>=1.0.0",
    "yfinance>=1.1.0",
]

[project.scripts]
idx-analyzer = "idx_analyzer.cli:main"

[project.optional-dependencies]
sentiment = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]
vader = [
    "vaderSentiment>=3.3.2",
]
all = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "vaderSentiment>=3.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
